--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "start-backend": "uvicorn factorview.main:app --port 5000 --host 0.0.0.0"
+    "backend": "uvicorn factorview.main:app --port 5000 --host 0.0.0.0"
   },
   "dependencies": {
     "axios": "^1.7.9",
